--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -1,5 +1,14 @@
 .App {
+  display: flex;
+  width: 100%;
+  max-width: 1000px;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
   text-align: center;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 25%;
 }
 
 .App-logo {
@@ -35,4 +44,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.savedPersonDiv{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  max-width: 800px;
+  border: 1px solid black;
+  background: lavender;
+}
+
+.individualPerson{
+  display:flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin: 20px 200px;
+  justify-content: center;
 }
